[package]
name = "bus"
version = "0.1.0"
authors = ["thomas <tduffy000@citymail.cuny.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = "0.1"
bytes = "1.1"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"